# realworld-axum-prisma

./: .gitignore  Cargo.toml  Dockerfile  fly.toml
api/: Cargo.toml
api/src/: error.rs  extractor.rs  lib.rs  main.rs  util.rs
api/src/db/: prisma.rs  query.rs
api/src/routes/: article.rs  comment.rs  profile.rs  user.rs
api/tests/: tests.rs
client/: Cargo.toml
client/src/: args.rs  article.rs  main.rs  user.rs
db/: Cargo.toml
db/src/: lib.rs  mutation.rs  prisma.rs  query.rs
db/tests/: test.rs
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  main.rs
frontend/src/components/: article.rs  article_preview.rs  footer.rs  header.rs  layout.rs  mod.rs
frontend/src/pages/: article.rs  create_edit_article.rs  home.rs  login_register.rs  mod.rs  profile.rs  settings.rs
frontend/src/services/: article.rs  mod.rs  user.rs
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: error.rs  extractor.rs  hashing.rs  lib.rs  main.rs  prisma.rs  util.rs
src/article/: routes.rs  types.rs
src/db/: mod.rs  mutation.rs  prisma.rs  query.rs
src/profiles/: routes.rs  types.rs
src/routes/: article.rs  comment.rs  profile.rs  user.rs
src/user/: mod.rs  routes.rs  types.rs
types/: Cargo.toml
types/src/: article.rs  comment.rs  lib.rs  user.rs
