[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.3", default-features = false, features = [
  "postgresql",
] }
slug = "0.1.4"
types = { path = "../types" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["rt", "sync", "parking_lot"] }
dotenvy = "0.15.6"
fake = "2.5.0"