[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = { version = "2.5.0", features = ["derive", "chrono"] }
serde = { version = "1.0.147", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
rand = "0.8.5"