[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = { version = "2.5.0", features = ["derive", "chrono"], optional = true}
serde = { version = "1.0.147", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
rand = {version = "0.8.5", optional = true}
yew-macro = "0.19.3"
yew = "0.19.3"

[features]
fake = ["dep:fake", "dep:rand"]
